--- a/Music Player/style.css
+++ b/Music Player/style.css
@@ -108,6 +108,7 @@ body {
   left: 20px;
   width: calc(100% - 40px);
   padding: 10px 10px 10px 150px;
+  opacity: 0;
   transform: translateY(0%);
   transition: transform 0.3s ease-in, opacity 0.3s ease-in;
   z-index: 0;
